<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".CameraActivity">


	<ImageView
			android:id="@+id/previewImageView"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:contentDescription="@string/pciture_taken"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/cameraButton"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.0"
			app:srcCompat="@drawable/ic_place_holder" />

	<Button
			android:id="@+id/cameraButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="76dp"
			android:layout_marginBottom="256dp"
			android:text="@string/camera"
			app:layout_constraintBottom_toTopOf="@+id/uploadButton"
			app:layout_constraintStart_toStartOf="@+id/previewImageView" />

	<Button
			android:id="@+id/galleryButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="52dp"
			android:text="@string/galeri"
			app:layout_constraintStart_toEndOf="@id/cameraButton"
			app:layout_constraintTop_toTopOf="@id/cameraButton" />

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="32dp"
			android:layout_marginRight="32dp"
			app:layout_constraintStart_toStartOf="@id/previewImageView"
			app:layout_constraintTop_toBottomOf="@id/cameraButton"
			app:layout_constraintBottom_toTopOf="@id/uploadButton"
			app:layout_constraintEnd_toEndOf="@id/previewImageView"
			android:layout_marginBottom="16dp">

		<EditText
				android:id="@+id/edt_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/description"
				android:inputType="textCapSentences|textMultiLine"
				android:maxLines="4"
				android:minLines="4" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
			android:id="@+id/uploadButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/upload"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.495"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.603"
			tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>