<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".LoginActivity">


	<ImageView
			android:id="@+id/imageViewLogin"
			android:layout_width="0dp"
			android:layout_height="200dp"
			android:layout_marginTop="72dp"
			android:src="@drawable/image_login"
			android:layout_marginLeft="32dp"
			android:layout_marginRight="32dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	<TextView
			android:id="@+id/loginWelcome"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@id/imageViewLogin"
			app:layout_constraintEnd_toEndOf="@id/imageViewLogin"
			app:layout_constraintTop_toBottomOf="@id/imageViewLogin"
			android:text="@string/welcome_to_dicoding"
			android:textColor="@color/black"
			android:textSize="20sp"
			android:textStyle="bold"
			android:gravity="center"
			/>

	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/loginWelcome"
			app:layout_constraintEnd_toEndOf="@+id/loginWelcome"
			app:layout_constraintTop_toBottomOf="@+id/loginWelcome"
			android:text="@string/welcome_dicoding_description"
			android:textSize="15sp"
			android:textStyle="bold"
			android:gravity="center"
			/>


	<EditText
			android:id="@+id/my_email_text_login"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="32dp"
			android:layout_marginTop="380dp"
			android:layout_marginRight="32dp"
			android:background="@drawable/edit_text_background"
			android:drawableStart="@drawable/ic_email_24"
			android:drawablePadding="10dp"
			android:hint="@string/user_email"
			android:nextFocusDown="@id/my_password_text"
			android:singleLine="true"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />


	<com.example.submissionintermediate.customView.MyEditTextPassword
			android:id="@+id/my_password_text_login"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@id/my_email_text_login"
			android:layout_marginTop="20dp"
			android:drawablePadding="10dp"
			android:inputType="textPassword"
			app:passwordToggleEnabled="true"
			android:singleLine="true"
			android:background="@drawable/edit_text_background"
			app:layout_constraintEnd_toEndOf="@id/my_email_text_login"
			app:layout_constraintTop_toBottomOf="@id/my_email_text_login"
			/>

	<Button
			android:id="@+id/buttonLogin"
			android:layout_width="0dp"
			android:layout_height="64dp"
			android:layout_marginTop="20dp"
			android:backgroundTint="@color/dicodingColor"
			android:text="@string/login"
			app:layout_constraintEnd_toEndOf="@id/my_password_text_login"
			app:layout_constraintStart_toStartOf="@id/my_password_text_login"
			android:background="@drawable/submit_button"
			app:layout_constraintTop_toBottomOf="@+id/my_password_text_login"
			android:alpha="1"
			/>

	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guidelineHorizontal"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.30191082"
			app:layout_constraintStart_toStartOf="parent" />

	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guidelineHorizontal2"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.1"
			app:layout_constraintStart_toStartOf="parent" />

	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guidelineVertical"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.5"
			app:layout_constraintStart_toStartOf="parent" />

	<TextView
			android:id="@+id/copyrightTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="8dp"
			android:text="@string/author"
			android:textSize="14sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline2"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.1" />

	<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.498"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.458"
			tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>