<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".RegisterActivity">

	<ImageView
			android:id="@+id/imageView"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/guideline2"
			app:srcCompat="@drawable/image_signup" />


	<TextView
			android:id="@+id/welcomeMessage"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_marginTop="20dp"
			android:text="@string/welcome_message_register"
			app:layout_constraintTop_toBottomOf="@id/imageView"
			app:layout_constraintStart_toStartOf="@id/imageView"
			app:layout_constraintEnd_toEndOf="@id/imageView"
			/>


	<com.example.submissionintermediate.customView.MyEditText
			android:id="@+id/my_edit_text"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginStart="16dp"
			android:layout_marginTop="48dp"
			android:layout_marginEnd="16dp"
			android:background="@drawable/edit_text_background"
			android:drawablePadding="10dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:singleLine="true"
			app:layout_constraintHorizontal_bias="0.493"
			app:layout_constraintStart_toStartOf="parent"
			android:nextFocusDown="@id/my_email_text"
			app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />

	<EditText
			android:id="@+id/my_email_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:drawableStart="@drawable/ic_email_24"
			android:hint="@string/user_email"
			android:drawablePadding="10dp"
			android:singleLine="true"
			android:nextFocusDown="@id/my_password_text"
			android:background="@drawable/edit_text_background"
			app:layout_constraintStart_toStartOf="@id/my_edit_text"
			app:layout_constraintEnd_toEndOf="@id/my_edit_text"
			app:layout_constraintTop_toBottomOf="@id/my_edit_text"
			/>

	<com.example.submissionintermediate.customView.MyEditTextPassword
			android:id="@+id/my_password_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@id/my_email_text"
			android:layout_marginTop="20dp"
			android:drawablePadding="10dp"
			android:inputType="textPassword"
			app:passwordToggleEnabled="true"
			android:singleLine="true"
			android:background="@drawable/edit_text_background"
			app:layout_constraintEnd_toEndOf="@id/my_email_text"
			app:layout_constraintTop_toBottomOf="@id/my_email_text"
			/>

	<Button
			android:id="@+id/buttonRegister"
			android:layout_width="0dp"
			android:layout_height="64dp"
			android:layout_marginTop="20dp"
			android:backgroundTint="@color/dicodingColor"
			android:text="@string/register"
			app:layout_constraintEnd_toEndOf="@id/my_edit_text"
			app:layout_constraintStart_toStartOf="@id/my_edit_text"
			android:background="@drawable/submit_button"
			app:layout_constraintTop_toBottomOf="@+id/my_password_text"
			android:alpha="1"
			 />



	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guidelineHorizontal"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.30191082"
			app:layout_constraintStart_toStartOf="parent" />

	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guidelineVertical"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_percent="0.5"
			app:layout_constraintStart_toStartOf="parent" />

	<TextView
			android:id="@+id/copyrightTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="8dp"
			android:text="@string/author"
			android:textSize="14sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline2"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.1" />

	<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.498"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.458"
			tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>