<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layoutDescription="@xml/activity_main_scene"
		tools:context=".MainActivity">


	<ImageView
			android:id="@+id/bg"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:scaleType="centerCrop"
			android:src="@drawable/bg_navy"
			app:flow_verticalBias="0"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHeight_percent=".09"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.0" />

	<TextView
			android:id="@+id/welcomeMessage"
			android:layout_width="150sp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/tempText"
			android:textColor="@color/white"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="@+id/bg"
			app:layout_constraintEnd_toEndOf="@id/bg"
			app:layout_constraintHorizontal_bias="0.183"
			app:layout_constraintStart_toStartOf="@+id/bg"
			app:layout_constraintTop_toTopOf="@+id/bg"
			app:layout_constraintVertical_bias="0.263" />

	<androidx.core.widget.NestedScrollView
			android:id="@+id/scroll"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/bg">

		<LinearLayout
				android:id="@+id/linear"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

			<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rv_stories"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="8dp"
					android:nestedScrollingEnabled="true"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/bg"
					app:layout_constraintVertical_bias="0.154" />
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/fab_maps"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:contentDescription="@string/view_map_stories"
			android:foregroundGravity="bottom"
			app:fabSize="normal"
			app:layout_anchorGravity="bottom|end"
			app:layout_constraintBottom_toTopOf="@id/fab_add"
			app:layout_constraintEnd_toEndOf="@id/fab_add"
			app:layout_constraintStart_toStartOf="@id/fab_add"
			app:srcCompat="@drawable/ic_map"
			tools:ignore="NotSibling" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/fab_add"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:contentDescription="@string/add_story_button"
			android:foregroundGravity="bottom"
			app:fabSize="normal"
			app:layout_anchorGravity="bottom|end"
			app:layout_constraintBottom_toBottomOf="parent "
			app:layout_constraintEnd_toEndOf="parent"
			app:srcCompat="@drawable/ic_add"
			tools:ignore="NotSibling" />

	<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.498"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.458"
			tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>